--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div>
-      <img src="cactus.jpg" />
+      <img src="cactus_img.jpg" />
     </div>
     <div>
       <div><p>Design</p></div>
