--- a/index.html
+++ b/index.html
@@ -13,22 +13,23 @@
     <title>Minimal Blog Card</title>
   </head>
   <body>
-    <div>
-      <img src="cactus_img.jpg" />
-    </div>
-    <div>
-      <div><p>Design</p></div>
+    <div class="card">
       <div>
-        <h4>Embracing Minimalism</h4>
-        <p>
-          From minimalist sculptures to minimalist paintings, this blog will
-          inspire you to appreciate the beauty that lies in simplicity.
-        </p>
+        <img src="cactus_img.jpg" class="cactus" />
       </div>
-      <hr />
+      <div>
+        <p class="tag">Design</p>
+        <div class="content">
+          <h4>Embracing Minimalism</h4>
+          <p>
+            From minimalist sculptures to minimalist paintings, this blog will
+            inspire you to appreciate the beauty that lies in simplicity.
+          </p>
+        </div>
+      </div>
+      <footer>
+        <p class="author">Annie Spratt</p>
+      </footer>
     </div>
-    <footer>
-      <p>Annie Spratt</p>
-    </footer>
   </body>
 </html>
